# coiflink

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  LICENSE  PRD_HealthTech.md  README.md  prd-coiflink.md
.github/: dependabot.yml
adw_sdlc/: PORT.md  README.md  package-lock.json  package.json
app-mobile/: README.md  pubspec.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/coiflink_api/: __init__.py  config.py  main.py
backend/coiflink_api/adapters/: __init__.py
backend/coiflink_api/adapters/entrant/: __init__.py  auth.py
backend/coiflink_api/adapters/inbound/: __init__.py  appointments.py  auth.py  catalog.py  employees.py  health.py  salons.py  security.py  services.py
backend/coiflink_api/adapters/outbound/notifications/: otp_sender_stub.py
backend/coiflink_api/adapters/outbound/persistence/: __init__.py  appointment_repository.py  audit_log_repository.py  base.py  models.py  salon_catalog_repository.py  salon_member_repository.py  salon_repository.py  salon_scope_repository.py  service_repository.py  session.py  user_repository.py
backend/coiflink_api/adapters/outbound/security/: __init__.py  argon2_hasher.py  jwt_token_service.py  login_rate_limiter_memory.py  otp_in_memory.py
backend/coiflink_api/adapters/outbound/storage/: __init__.py  s3_media_storage.py
backend/coiflink_api/adapters/sortant/: __init__.py
backend/coiflink_api/adapters/sortant/notifications/: __init__.py  expediteur_otp_stub.py
backend/coiflink_api/adapters/sortant/persistance/: __init__.py  base.py  depot_utilisateur.py  modeles.py  session.py
backend/coiflink_api/adapters/sortant/securite/: hacheur.py  otp_memoire.py
backend/coiflink_api/application/: __init__.py  appointments.py  authentication.py  authorization.py  catalog.py  employees.py  inscription.py  password_reset.py  registration.py  salons.py  services.py
backend/coiflink_api/application/ports/: __init__.py  appointment_repository.py  audit_log.py  depot_otp.py  depot_utilisateur.py  expediteur_otp.py  hacheur_mot_de_passe.py  login_rate_limiter.py  media_storage.py  otp_repository.py  otp_sender.py  password_hasher.py  salon_catalog_repository.py  salon_member_repository.py  salon_repository.py  salon_scope_repository.py  service_repository.py  token_service.py  user_repository.py
backend/coiflink_api/domain/: access.py  appointment.py  audit.py  availability.py  credentials.py  enums.py  errors.py  identifier.py  membership.py  opening_hours.py  otp.py  password.py  permissions.py  phone.py  principal.py  salon.py  service.py  tokens.py  user.py
backend/coiflink_api/domaine/: __init__.py  enums.py  erreurs.py  mot_de_passe.py  otp.py  telephone.py  utilisateur.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_schema_initial.py  0002_salon_members.py  0003_salon_photos.py  0004_audit_logs.py
backend/scripts/: seed_dev_data.py
backend/tests/: conftest.py  test_appointment_api.py  test_appointment_concurrency.py  test_appointment_usecases.py  test_auth_api.py  test_auth_manager_api.py  test_authentication_usecase.py  test_authorization_policy.py  test_catalog_api.py  test_catalog_detail_api.py  test_config.py  test_create_employee_usecase.py  test_create_salon_usecase.py  test_domain_access.py  test_domain_appointment.py  test_domain_audit.py  test_domain_availability.py  test_domain_opening_hours.py  test_domain_permissions.py  test_domain_principal.py  test_domain_salon.py  test_domain_service.py  test_employee_api.py  test_get_public_salon_usecase.py  test_hacheur.py  test_health.py  test_identifier.py  test_inscription_usecase.py  test_jwt_token_service.py  test_login_api.py  test_login_e2e.py  test_login_rate_limiter.py  test_manager_auth_api.py  test_manager_postgres_integration.py  test_manager_registration_integration.py  test_manager_registration_usecase.py  test_mot_de_passe.py  test_otp.py  test_password.py  test_password_hasher.py  (+22 more)
deploy/: .env.example  docker-compose.yml
scripts/: run-issue.sh  (+3 more)
(+240 files in other folders)
