[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coiflink-api"
version = "0.0.0"
description = "API backend CoifLink (FastAPI) — squelette d'initialisation du dépôt (#2)."
readme = "README.md"
# Version de référence Python figée par #2 (cf. docs/adr/0007 et ADR-0003).
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Dépendances de développement/test (test gate `pytest`, cf. ADR-0003 / #6).
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["coiflink_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
