[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coiflink-api"
version = "0.0.0"
description = "API backend CoifLink (FastAPI) — squelette d'initialisation du dépôt (#2)."
readme = "README.md"
# Version de référence Python figée par #2 (cf. docs/adr/0007 et ADR-0003).
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Persistance PostgreSQL (issue #3, ADR-0009) : ORM + migrations + driver.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # Authentification (issue #8, ADR-0012) : hachage de mot de passe argon2id
    # (pas de troncature 72 octets, recommandé OWASP) et validation d'e-mail
    # native de Pydantic (`EmailStr`) pour l'inscription client.
    "argon2-cffi>=23",
    "pydantic[email]>=2.7",
    # Connexion / émission de JWT (issue #10, ADR-0013) : PyJWT (HS256 symétrique).
    "pyjwt>=2.8",
    # Stockage objet S3-compatible (issue #15, ADR-0005) : client boto3, agnostique
    # du fournisseur (endpoint_url configurable → MinIO local ou service en prod).
    "boto3>=1.34",
]

[project.optional-dependencies]
# Dépendances de développement/test (test gate `pytest`, cf. ADR-0003 / #6) et
# outillage de lint de la CI applicative (`ruff`, cf. #4 / ADR-0010).
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["coiflink_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# --------------------------------------------------------------------------- #
# Ruff — linter du backend (CI #4, cf. docs/adr/0010).
# Jeu de règles volontairement conservateur : défaut de ruff (pyflakes `F` +
# erreurs pycodestyle `E4/E7/E9`) étendu à bugbear (`B`) et aux avertissements
# (`W`). Le code existant (#2/#3) passe déjà ce jeu sans reformatage : la CI
# exécute `ruff check` (lint) ; le formatage n'est pas imposé au MVP pour ne pas
# réécrire les fichiers formatés (black) livrés par les issues précédentes.
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["B", "W"]
